--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hello-world</title>
+    <title>Shadowdark Database</title>
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <iframe 
+      id="shadowdark-frame"
+      src="https://shadowdark.ronanchilvers.com/index.html"
+      frameborder="0"
+      allowfullscreen
+    ></iframe>
   </body>
 </html>
