Replace iframe with searchable database UI
- Remove iframe embed and unused assets - Add tabbed search interface
for bestiary, spells, and items - Display item details with stat blocks
and sections - Update manifest width to 400px - Refactor styles for new
layout and UI components

--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shadowdark Database</title>
-    <link rel="stylesheet" href="/src/style.css" />
-  </head>
   <body>
-    <iframe 
-      id="shadowdark-frame"
-      src="https://shadowdark.ronanchilvers.com/index.html"
-      frameborder="0"
-      allowfullscreen
-    ></iframe>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
